# llama3-CUDA

./: .gitignore  CMakeLists.txt  README.md  a.out  ex  main.cu  setup.sh  sum_reduce.cu
include/: bpe_tokenizer.cuh  flash_attention.cuh  forward_pass.cuh  layer_norm.cuh  mat_add.cuh  mat_mul.cuh  mat_operations.cuh  multi_head.cuh  multi_head_attention.cuh  relu.cuh  rms_norm.cuh  rope_rotation.cuh  softmax.cuh  transformer.cuh  utils.cuh
lib/: mat_operations.cuh  tokenizer.cuh
performance/: a.out  cache.cu  tester.cu
prev/: llama.cu  main.cu
src/: bpe_tokenizer.cu  flash_attention.cu  forward_pass.cu  layer_norm.cu  llama  llama.cu  main.cu  mat_add.cu  mat_mul.cu  multi_head.cu  multi_head_attention.cu  rms_norm.cu  rope_rotation.cu  softmax.cu  tokenizer.py  transformer.cu  utils.cu
tests/: profile_gemm.cu  profile_softmax.cu  softmax.cu
